--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,7 @@ body {
   font-family: "Poppins", sans-serif !important;
 }
 ::selection {
-  background-color: #ff4800;
+  background-color: #ffd700;
   color: #000000;
 }
 .borderBlack {
