--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,8 @@ body,
 body {
   scroll-behavior: smooth;
   font-family: "Poppins", sans-serif !important;
+  scroll-behavior: smooth;
+ 
 }
 ::selection {
   background-color: #ffd700;
